tests/invalid/syntax_err_paren_mismatch.c
int main() {
    for (int i = 2; ))
        int a = 0;
}
// ERROR: Line 2, Error 2009